  - Removed deprecated name attribute from Mojo::UserAgent.
  - Removed deprecated no_proxy attribute from Mojo::UserAgent.
  - Removed deprecated app method from Mojo::UserAgent.
  - Removed deprecated app_url method from Mojo::UserAgent.
  - Removed deprecated detect_proxy method from Mojo::UserAgent.
  - Removed deprecated need_proxy method from Mojo::UserAgent.
  - Improved request_ok method in Test::Mojo to handle WebSocket handshakes.
  - Improved Mojo::IOLoop::Server to use address and port for descriptor
    inheritance.
  - Improved list of available commands to be alphabetical. (jberger)
  - Fixed select_field helper to be nondestructive.
  - Fixed XML semantics bug in Mojo::DOM::HTML.

4.67  2014-01-11
  - Added history and max_history_size attributes to Mojo::Log.
  - Improved exception and not found pages with log messages.
  - Improved exception page with more information.
  - Improved not found page with a more generic message.
  - Improved inline templates to use their checksum as name.

4.66  2014-01-04
  - Added success attribute to Test::Mojo.
  - Improved Mojo::DOM::CSS and Mojo::DOM::HTML performance.
  - Fixed XML detection bug in Mojo::DOM.
  - Fixed escaping bugs in Mojo::DOM::CSS.

4.65  2014-01-02
  - Deprecated use of hash references for optgroup generation with
    select_field helper in favor of Mojo::Collection objects.
  - Added b and c helpers to Mojolicious::Plugin::DefaultHelpers.
  - Fixed reference handling bug in Mojo::Collection.

4.64  2014-01-01
  - Fixed helper export bug in Mojolicious::Plugin::EPRenderer.

4.63  2013-12-19
  - Deprecated Mojolicious::secret in favor of Mojolicious::secrets.
  - Added support for rotating secrets.
  - Added secrets method to Mojolicious.

4.62  2013-12-17
  - Deprecated Mojo::URL::to_rel.

4.61  2013-12-16
  - Added select_one method to Mojo::DOM::CSS.
  - Improved performance of Mojo::DOM::at significantly.

4.60  2013-12-11